--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           budowlanym m.in. pomiary instalacji elektrycznych i odgromowych,
           kontrole instalacji sanitarnych oraz przewodów kominowych.
         </p>
-        <img class="logoelpim" src="elpimlogo.png" alt="logo" />
+        <img class="logoelpim" src="elpimlogo.png" alt="logo elpim" />
       </div>
     </section>
 
@@ -217,7 +217,7 @@
         </ul>
         <div class="logo-heading">
           <a class="footerheading" href="#hero-page">elpim</a>
-          <img class="footerlogo" src="elpimlogo.png" alt="logo" />
+          <img class="footerlogo" src="elpimlogo.png" alt="logo elpim" />
         </div>
       </div>
     </footer>
